--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,3 @@
 <h1>About Travelicitous</h1>
-<p>Find me in app/views/welcome/about.html.erb</p>
+<p>This application was built by Hannah Joy Lehman. It was an experiment in working with Rails and an API that relies on Javascript. More features are in the works.</p>
+<%= link_to("View my Code Here", "http://github.com/hannahlehman/google_maps") %>
