--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -12,6 +12,7 @@
   <tbody>
     <% @destinations.each do |destination| %>
       <tr>
+        <td><%= destination.description %></td>
         <td><%= link_to 'Show', destination %></td>
         <td><%= link_to 'Edit', edit_destination_path(destination) %></td>
         <td><%= link_to 'Destroy', destination, method: :delete, data: { confirm: 'Are you sure?' } %></td>
