--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,8 +40,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><%= link_to "Destinations", destinations_url %></li>
-        <li><a href="#">About</a></li>
+        <li><%= link_to "Your Destinations", destinations_url %></li>
+        <li><%= link_to "About", about_url %></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </nav>
